--- a/src/blogs/前端基础/TypeScript/4. tsconfig配置文件/1. 编译器配置.md
+++ b/src/blogs/前端基础/TypeScript/4. tsconfig配置文件/1. 编译器配置.md
@@ -37,7 +37,7 @@ TypeScript 配置文件（tsconfig.json）包含两个主要部分：
 - `watchOptions` - 文件监听选项
 
 ### 编译器选项（Compiler Options）
-位于 `compilerOptions` 对象内的选项，控制 TypeScript 编译的详细行为。完整的编译器选项文档请参考 [编译选项配置](./编译选项配置.md)。
+位于 `compilerOptions` 对象内的选项，控制 TypeScript 编译的详细行为。完整的编译器选项文档请参考 [编译选项配置](./2.%20编译选项配置.md)。
 
 主要类别包括：
 - `target` - 目标 ECMAScript 版本
@@ -232,7 +232,7 @@ TypeScript 提供三种机制控制编译文件范围：
 ### 3.1 根级选项参考
 
 ### 3.2 编译器选项概览
-编译器选项位于 `compilerOptions` 对象内，控制 TypeScript 编译的详细行为。完整的编译器选项文档请参考 [编译选项配置](./编译选项配置.md)。
+编译器选项位于 `compilerOptions` 对象内，控制 TypeScript 编译的详细行为。完整的编译器选项文档请参考 [编译选项配置](./2.%20编译选项配置.md)。
 
 主要类别包括：
 - `target` - 目标 ECMAScript 版本
@@ -761,11 +761,3 @@ TypeScript 5.0+ 引入了许多新特性，优化了配置体验：
 - **Vite**：`moduleResolution: "bundler"` + `noEmit: true`
 - **Webpack**：`module: "ESNext"` + `target: "ES2020"`
 - **esbuild**：`module: "ESNext"` + `skipLibCheck: true`
-
-## 附录
-- **TypeScript 版本兼容性矩阵**：各选项的最低版本要求
-- **配置选项完整索引**：所有根级选项和常用编译器选项速查
-- **官方文档与资源链接**：
-  - [TypeScript Handbook](https://www.typescriptlang.org/docs/)
-  - [tsconfig.json 参考](https://www.typescriptlang.org/tsconfig)
-  - [编译选项文档](./编译选项配置.md)
